# caffe

./: .gitignore  CMakeLists.txt  Makefile  README.md
cmake/: ConfigGen.cmake  Cuda.cmake  Dependencies.cmake  ProtoBuf.cmake  Targets.cmake  WindowsDownloadPrebuiltDependencies.cmake
cmake/Templates/: CaffeConfig.cmake.in
data/ilsvrc12/: get_ilsvrc_aux.sh
docker/cpu/: Dockerfile
docker/gpu/: Dockerfile
examples/FRCNN/: demo_frcnn.sh
examples/FRCNN/config/: voc_config.json
include/caffe/ACTION_REC/: video_data_layer.hpp
include/caffe/FRCNN/util/: frcnn_utils.hpp
matlab/+caffe/private/: caffe_.cpp
models/FRCNN/: fetch_imagenet_models.sh
python/: CMakeLists.txt
python/caffe/: _caffe.cpp
scripts/: build_win.cmd
src/api/: CMakeLists.txt
src/caffe/: CMakeLists.txt
src/caffe/proto/: caffe.proto
src/caffe/test/: test_gradient_based_solver.cpp
src/caffe/util/: db_lmdb.cpp  hdf5.cpp
tools/: CMakeLists.txt  caffe.cpp
